--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <div class="clock">
-      <div class="hand seconds"></div>
-      <div class="hand minutes"></div>
-      <div class="hand hours"></div>
+      <div class="hand seconds" data-seconds></div>
+      <div class="hand minutes" data-minutes></div>
+      <div class="hand hours" data-hours></div>
       <div class="number number1">1</div>
       <div class="number number2">2</div>
       <div class="number number3">3</div>
